--- a/interface/bower.json
+++ b/interface/bower.json
@@ -11,7 +11,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "semantic": "semantic-ui#^2.1.8"
+    "semantic": "semantic-ui#^2.1.8",
+    "angular-chart.js": "^0.10.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
